Replaced queries execution on ReactiveClassicGenericQueryExecutor by execution on Pool