@@ -5,6 +5,7 @@ import static com.google.common.base.CaseFormat.LOWER_UNDERSCORE;
 import static java.lang.String.format;
 import static org.folio.rest.jooq.Tables.SNAPSHOTS_LB;
 
+import io.vertx.reactivex.sqlclient.SqlConnection;
 import java.time.ZoneOffset;
 import java.util.Arrays;
 import java.util.Collection;
@@ -19,6 +20,8 @@ import java.util.stream.StreamSupport;
 import javax.ws.rs.BadRequestException;
 import javax.ws.rs.NotFoundException;
 
+import io.vertx.reactivex.sqlclient.SqlResult;
+import io.vertx.reactivex.sqlclient.Tuple;
 import org.apache.commons.lang3.StringUtils;
 import org.folio.rest.jaxrs.model.Metadata;
 import org.folio.rest.jaxrs.model.Snapshot;
@@ -28,14 +31,19 @@ import org.folio.rest.jooq.tables.mappers.RowMappers;
 import org.folio.rest.jooq.tables.pojos.SnapshotsLb;
 import org.folio.rest.jooq.tables.records.SnapshotsLbRecord;
 import org.jooq.Condition;
+import org.jooq.DSLContext;
 import org.jooq.InsertSetStep;
 import org.jooq.InsertValuesStepN;
 import org.jooq.OrderField;
+import org.jooq.SQLDialect;
 import org.jooq.SortOrder;
+import org.jooq.conf.ParamType;
+import org.jooq.conf.Settings;
 import org.jooq.impl.DSL;
 
 import io.github.jklingsporn.vertx.jooq.classic.reactivepg.ReactiveClassicGenericQueryExecutor;
 import io.vertx.core.Future;
+import io.vertx.reactivex.sqlclient.Pool;
 import io.vertx.sqlclient.Row;
 import io.vertx.sqlclient.RowSet;
 
@@ -48,6 +56,10 @@ public final class SnapshotDaoUtil {
 
   public static final String SNAPSHOT_NOT_STARTED_MESSAGE_TEMPLATE = "Date when processing started is not set, expected snapshot status is PARSING_IN_PROGRESS, actual - %s";
   public static final String SNAPSHOT_NOT_FOUND_TEMPLATE = "Snapshot with id '%s' was not found";
+
+  private static final DSLContext dslContext = DSL.using(SQLDialect.POSTGRES, new Settings()
+    .withParamType(ParamType.NAMED)
+    .withRenderNamedParamPrefix("$"));
 
   private SnapshotDaoUtil() { }
 
@@ -73,6 +85,29 @@ public final class SnapshotDaoUtil {
   }
 
   /**
+   * Searches for {@link Snapshot} by {@link Condition} and ordered by collection of {@link OrderField} with offset and limit
+   * using {@link SqlConnection}
+   *
+   * @param sqlConnection sql connection
+   * @param condition     condition
+   * @param orderFields   fields to order by
+   * @param offset        offset
+   * @param limit         limit
+   * @return future with {@link List} of {@link Snapshot}
+   */
+  public static Future<List<Snapshot>> findByCondition(SqlConnection sqlConnection, Condition condition,
+                                                       Collection<OrderField<?>> orderFields, int offset, int limit) {
+    var query = dslContext.selectFrom(SNAPSHOTS_LB)
+      .where(condition)
+      .orderBy(orderFields)
+      .offset(offset)
+      .limit(limit);
+    return sqlConnection.preparedQuery(query.getSQL())
+      .execute(Tuple.from(query.getBindValues()))
+      .map(res -> toSnapshots(res.getDelegate()));
+  }
+
+  /**
    * Count query by {@link Condition}
    *
    * @param queryExecutor query executor
@@ -87,6 +122,22 @@ public final class SnapshotDaoUtil {
   }
 
   /**
+   * Count query by {@link Condition}
+   *
+   * @param sqlConnection sql connection
+   * @param condition     condition
+   * @return future with count
+   */
+  public static Future<Integer> countByCondition(SqlConnection sqlConnection, Condition condition) {
+    var query = dslContext.selectCount()
+      .from(SNAPSHOTS_LB)
+      .where(condition);
+    return sqlConnection.preparedQuery(query.getSQL())
+      .execute(Tuple.from(query.getBindValues()))
+      .map(rows -> rows.iterator().next().getInteger(0));
+  }
+
+  /**
    * Searches for {@link Snapshot} by id using {@link ReactiveClassicGenericQueryExecutor}
    *
    * @param queryExecutor query executor
@@ -97,6 +148,31 @@ public final class SnapshotDaoUtil {
     return queryExecutor.findOneRow(dsl -> dsl.selectFrom(SNAPSHOTS_LB)
       .where(SNAPSHOTS_LB.ID.eq(UUID.fromString(id))))
         .map(SnapshotDaoUtil::toOptionalSnapshot);
+  }
+
+  /**
+   * Searches for {@link Snapshot} by id using {@link Pool}
+   *
+   * @param pool pool
+   * @param id   id
+   * @return future with optional Snapshot
+   */
+  // todo: consider replacing this with method below that uses SqlConnection
+  public static Future<Optional<Snapshot>> findById(Pool pool, String id) {
+    var query = dslContext.selectFrom(SNAPSHOTS_LB)
+      .where(SNAPSHOTS_LB.ID.eq(UUID.fromString(id)));
+    return pool.preparedQuery(query.getSQL())
+      .execute(Tuple.from(query.getBindValues()))
+      .map(rows -> rows.size() > 0 ? Optional.of(toSnapshot(rows.iterator().next().getDelegate())) : Optional.empty()); //todo
+  }
+
+  public static Future<Optional<Snapshot>> findById(SqlConnection sqlConnection, String id) {
+    return sqlConnection.preparedQuery(dslContext
+        .selectFrom(SNAPSHOTS_LB)
+        .where(SNAPSHOTS_LB.ID.eq(UUID.fromString(id)))
+        .getSQL())
+      .execute(Tuple.of(id))
+      .map(rows -> rows.size() > 0 ? Optional.of(toSnapshot(rows.iterator().next().getDelegate())) : Optional.empty()); //todo
   }
 
   /**
@@ -117,6 +193,40 @@ public final class SnapshotDaoUtil {
   }
 
   /**
+   * Saves {@link Snapshot} to the db using {@link Pool}
+   *
+   * @param pool     pool
+   * @param snapshot snapshot
+   * @return future with updated Snapshot
+   */
+  // todo: consider replacing this with method below that uses SqlConnection
+  public static Future<Snapshot> save(Pool pool, Snapshot snapshot) {
+    SnapshotsLbRecord dbRecord = toDatabaseRecord(setProcessingStartedDate(snapshot));
+    var query = dslContext.insertInto(SNAPSHOTS_LB)
+      .set(dbRecord)
+      .onDuplicateKeyUpdate()
+      .set(dbRecord)
+      .returning();
+    return pool.preparedQuery(query.getSQL())
+      .execute(Tuple.from(query.getBindValues()))
+      .map(io.vertx.reactivex.sqlclient.RowSet::getDelegate)
+      .map(SnapshotDaoUtil::toSingleSnapshot);
+  }
+
+  public static Future<Snapshot> save(SqlConnection connection, Snapshot snapshot) {
+    SnapshotsLbRecord dbRecord = toDatabaseRecord(setProcessingStartedDate(snapshot));
+    var query = dslContext.insertInto(SNAPSHOTS_LB)
+      .set(dbRecord)
+      .onDuplicateKeyUpdate()
+      .set(dbRecord)
+      .returning();
+    return connection.preparedQuery(query.getSQL())
+      .execute(Tuple.from(query.getBindValues()))
+      .map(io.vertx.reactivex.sqlclient.RowSet::getDelegate)
+      .map(SnapshotDaoUtil::toSingleSnapshot);
+  }
+
+  /**
    * Saves {@link List} of {@link Snapshot} to the db using {@link ReactiveClassicGenericQueryExecutor}
    *
    * @param queryExecutor query executor
@@ -133,6 +243,51 @@ public final class SnapshotDaoUtil {
       }
       return insertValuesStepN;
     }).map(SnapshotDaoUtil::toSnapshots);
+  }
+
+  /**
+   * Saves {@link List} of {@link Snapshot} to the db using {@link Pool}
+   *
+   * @param pool          pool
+   * @param snapshots     list of snapshots
+   * @return future with updated List of Snapshot
+   */
+  public static Future<List<Snapshot>> save(Pool pool, List<Snapshot> snapshots) {
+    InsertSetStep<SnapshotsLbRecord> insertSetStep = dslContext.insertInto(SNAPSHOTS_LB);
+    InsertValuesStepN<SnapshotsLbRecord> insertValuesStepN = null;
+    for (Snapshot snapshot : snapshots) {
+      SnapshotsLbRecord dbRecord = toDatabaseRecord(setProcessingStartedDate(snapshot));
+      insertValuesStepN = insertSetStep.values(dbRecord.intoArray());
+    }
+
+    return pool.preparedQuery(insertValuesStepN.getSQL())
+      .execute(Tuple.from(insertValuesStepN.getBindValues()))
+      .map(io.vertx.reactivex.sqlclient.RowSet::getDelegate)
+      .map(SnapshotDaoUtil::toSnapshots);
+  }
+
+  /**
+   * Updates {@link Snapshot} in the db using {@link Pool}
+   *
+   * @param pool     pool
+   * @param snapshot snapshot to update
+   * @return future of updated Snapshot
+   */
+  public static Future<Snapshot> update(Pool pool, Snapshot snapshot) {
+    SnapshotsLbRecord dbRecord = toDatabaseRecord(setProcessingStartedDate(snapshot));
+    var query = dslContext.update(SNAPSHOTS_LB)
+      .set(dbRecord)
+      .where(SNAPSHOTS_LB.ID.eq(UUID.fromString(snapshot.getJobExecutionId())))
+      .returning();
+    return pool.preparedQuery(query.getSQL())
+      .execute(Tuple.from(query.getBindValues()))
+      .<Optional<Snapshot>>map(rows -> (Optional<Snapshot>) toSingleOptionalSnapshot(rows.getDelegate()))
+      .map(optionalSnapshot -> {
+        if (optionalSnapshot.isPresent()) { // todo maybe refactor fluently
+          return optionalSnapshot.get();
+        }
+        throw new NotFoundException(format(SNAPSHOT_NOT_FOUND_TEMPLATE, snapshot.getJobExecutionId()));
+      });
   }
 
   /**
@@ -171,6 +326,22 @@ public final class SnapshotDaoUtil {
   }
 
   /**
+   * Deletes {@link Snapshot} by id using {@link Pool}
+   *
+   * @param pool pool
+   * @param id   id
+   * @return future with boolean whether Snapshot deleted
+   */
+  public static Future<Boolean> delete(Pool pool, String id) {
+    return pool.preparedQuery(dslContext
+        .deleteFrom(SNAPSHOTS_LB)
+        .where(SNAPSHOTS_LB.ID.eq(UUID.fromString(id)))
+        .getSQL())
+      .execute(Tuple.of(id))
+      .map(rowSet -> rowSet.rowCount() == 1);
+  }
+
+  /**
    * Deletes all {@link Snapshot} using {@link ReactiveClassicGenericQueryExecutor}
    *
    * @param queryExecutor query executor
@@ -178,6 +349,18 @@ public final class SnapshotDaoUtil {
    */
   public static Future<Integer> deleteAll(ReactiveClassicGenericQueryExecutor queryExecutor) {
     return queryExecutor.execute(dsl -> dsl.deleteFrom(SNAPSHOTS_LB));
+  }
+
+  /**
+   * Deletes all {@link Snapshot} using {@link Pool}
+   *
+   * @param pool pool
+   * @return future of number of Snapshot deleted
+   */
+  public static Future<Integer> deleteAll(Pool pool) {
+    return pool.query(dslContext.deleteFrom(SNAPSHOTS_LB).getSQL())
+      .execute()
+      .map(SqlResult::rowCount);
   }
 
   /**
@@ -310,7 +493,7 @@ public final class SnapshotDaoUtil {
   private static List<Snapshot> toSnapshots(RowSet<Row> rows) {
     return StreamSupport.stream(rows.spliterator(), false)
       .map(SnapshotDaoUtil::toSnapshot)
-      .collect(Collectors.toList());
+      .toList();
   }
 
   private static Snapshot setProcessingStartedDate(Snapshot snapshot) {
